fix sign up form letter spacing

--- a/source/stylesheets/landing.sass
+++ b/source/stylesheets/landing.sass
@@ -119,6 +119,7 @@ html
 
 #mc-embedded-subscribe-form
   padding-top: 1em
+  letter-spacing: 0
 
   fieldset
     border: none
